reworked the end of chapter 2 moved stuff to Appendix A

--- a/appendices.tex
+++ b/appendices.tex
@@ -11,29 +11,46 @@ APPENDIX\\
 \end{center}
 \addcontentsline{toc}{section}{APPENDIX}
 
-%%\section{Example Graphics} 
+\section{Detailed Steps of the SDLC}
+\label{app:detailedSDLC}
 
-%%\begin{figure}[h!]
-%%\scriptsize
-%%$$
-%%\begin{array}{cc}
-%%\includegraphics[width=0.2\textwidth]{sdlc-ae.png} &
-%%\includegraphics[width=0.2\textwidth]{sdlc-ae.png}\\
-%%(a) & (b) \\
-%%\includegraphics[width=0.2\textwidth]{sdlc-ae.png} &
-%%\includegraphics[width=0.2\textwidth]{sdlc-ae.png}\\
-%%(c) & (d) \\
-%%\includegraphics[width=0.2\textwidth]{sdlc-ae.png} &
-%%\includegraphics[width=0.2\textwidth]{sdlc-ae.png}\\
-%%(e) & (f) \\
-%%\end{array}
-%%$$
-%%\caption{A graphic in the appendix}
-%%\end{figure}
+    Often times the SDLC contains more than the 5 basic steps of requirements, design,
+    implementation, testing, and  deployment/maintenance.  Those are the high-level
+    phases, but many steps are required to complete each phase.  The following list
+    provides a more detailed version of what needs to be accomplished in the 
+    entire life cycle of software development. These steps do not need 
+    to occur in a sequential fashion.
 
-%% Prints all figures and tables on the page and begins a new page
-%% http://www.astro.rug.nl/~kuijken/latex.html
-%%\clearpage
+    \begin{easylist}[itemize]
+        & Identify the Work/Task/Project
+        && Get Initial Idea 
+        && Obtain Details
+        & Estimate
+        && Create an Estimate (What is included? What is the output? days/dollars/hours/reqs)
+        && Obtain Approval 
+        && Quit or Go Forward
+        & Document Requirements
+        && Identify the Requirements
+        && Detail the Requirements
+        & Design The Software
+        && Find System Integrations
+        && Identify Functional Specs
+        && Detail the Functional Specs
+        & Development of all the tasks in Design and Requirements
+        && Identify the Coding Tasks
+        && Write the Code/Develop the solution
+        && Write the Unit Tests
+        & Test
+        && Create Test Plans and Cases
+        && Run Test Plans and Cases
+        & Deployment
+        && Create Deployment Steps
+        && Run Deployment Steps
+        & Maintenance
+        && Capture Bugs
+        && Survey Users
+        & Start Again
+    \end{easylist}
 
 \section{CASE STUDY SOURCE CODE} 
 \label{app:case}
