--- a/paper_10_intro.tex
+++ b/paper_10_intro.tex
@@ -70,6 +70,35 @@
     software development.
 
 
+\subsection{TERMINOLOGY}
+    Like any other business domain, the software engineering field has number
+    of specific terms.  Many of these terms will be used throughout the remainder
+    of the document, so definitions are provided.  
+
+    \begin{description}
+    
+        \item[Application] - a software system or a collection of other applications 
+        \item[Release] - A collection of projects being put in production on a specified date
+        \item[Project] - A body of work involving zero or more applications in preparation for a release
+        \item[SIT]   (Systems Integration Testing) - The initial step of testing
+            after the development phase of the SDLC.  This is typically 
+            performed by members of the SDO.  It is validation that all the
+            software components function together as expected.
+        \item[UAT]   (User Acceptance Testing) - The final step of testing
+            when a select few members of the user group are invited to
+            validate the software system. Once validation has occured for
+            UAT, the software system is ready to proceed to production
+        \item[PROD]  (Production) - The software has been released to the final audience.
+        \item[defect] ``A software defect is a bug or error that causes
+                    software to either stop operating or to produce
+                    invalid or unacceptable results'' as quoted from Capers Jones
+                \cite{Jones2009}.  It is important to mention that even though defects are typically 
+                found in the computer code, a defect should not be isolated to just code.   
+                A poorly written requirement or missed test cases can 
+                both be considered a defect.  Other common names for a defect 
+                are: bug, error, fault, or ticket.
+    \end{description}
+
 
 \subsection{CMMI}
     The Capability Maturity Model Integration (CMMI) is one of the most 
