--- a/paper_30_measure.tex
+++ b/paper_30_measure.tex
@@ -24,6 +24,10 @@ A metric can be defined as the science of indirect measurement.
 
 Data Driven Software Engineering not Data Driven Software Development
 
+Also in here is the 4 severity levels.  
+
+        Also, current defect removal is only about 85\% and this value should be increased to about 95\% \cite{Jones2009}. 
+
 
 \subsection{INDICATORS}
 Indicators can be crucial measurements
